--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="jumbotron">
       {% if user.is_authenticated %}
-      <center><h2>welcome back {{user.username}}!</h2></center>
+      <center><h2>welcome {{user.username}}!</h2></center>
       <p class="lead">
         This is a Quiz application on different technologies. practice the
         quizzes and get benifited
@@ -14,8 +14,12 @@
       <p>The following categories are availabe for taking quiz</p>
       {% for category in categories %}
       <div
-        class="d-flex flex-column justify-content-start align-content-center">
-        <a href="{% url 'quizz' %}" class="btn btn-primary mb-3 w-25" id={{category.id}}
+        class="d-flex flex-column justify-content-start align-content-center"
+      >
+        <a
+          href="{% url 'quizz' %}"
+          class="btn btn-primary mb-3 w-25"
+          id="{{category.id}}"
           >{{category}}</a
         >
       </div>
